--- a/style.css
+++ b/style.css
@@ -50,46 +50,116 @@
 /**************************************************/
   ul {
     list-style-type: none;
+    padding: 0;
   }
 
+ 
 
+/* Header > toolbar > bookshelf*/
   .wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    padding: 10px;
+    gap:15px;
+    margin:15px;
   }
 
   .main {
     grid-column: 1/4;
-    grid-row: 2/4;
+    grid-row: 1/3;
 
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: .3fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 4rem 1fr;
+    gap: 15px;
+
+    
+
   }
 
+  .addBook {
+    border-radius:8px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    color: black;
+    font-weight: bold;
+    background-color: rgb(232, 244, 245);
 
+  }
+
+  .addBook:hover {
+    background-color: rgb(165, 151, 168);
+  }
 
   .toolbar {
-    border: 1px solid rgb(0, 217, 255);
-    grid-column: 1/4;
+    border: 1px solid rgba(0, 0, 0, 0.199);
+    background-color: rgba(60, 182, 204, 0.507);
+    border-radius: 5px;
+    grid-column: 1/2;
     grid-row: 1/2;
     display: flex;
     justify-content: space-between;
-    padding:10px;
+    align-items: center;
+    padding:20px;
 
   }
 
   .shelf {
-    grid-column: 1/4;
+    grid-column: 1/2;
     grid-row: 2/4;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1lfr);
+    grid-template-rows: repeat(autofit, 1fr);
+    gap:15px;
+    margin: 5px;
+
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+    
+    
+    
   }
 
   .book {
+    
+    border:1px solid rgba(255, 192, 203, 0.433);
+    box-shadow: 3px 3px 3px 1px rgba(83, 166, 180, 0.507);
+    border-radius: 10px;
+    padding: 30px;
 
-    border:1px solid pink;
+    
   }
 
+.title {
+    font-weight: bold;
+    font-size: 1.7rem;
+}
+
+.pageCount {
+    font-weight: lighter;
+    font-style: italic;
+    font-size: .8rem;
+    margin-top: 40px;
+}
+
+
+.bookPopup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+}
+
+::backdrop {
+
+    background-image: linear-gradient(
+        45deg,
+    magenta,
+    rebeccapurple,
+    dodgerblue,
+    green
+    );
+    opacity: 0.75;
+}
