--- a/style.css
+++ b/style.css
@@ -1,165 +1,207 @@
-
 /*
   1. Use a more-intuitive box-sizing model.
 */
-*, *::before, *::after {
-    box-sizing: border-box;
-  }
-  /*
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/*
     2. Remove default margin
   */
-  * {
-    margin: 0;
-  }
-  /*
+* {
+  margin: 0;
+}
+
+/*
     Typographic tweaks!
     3. Add accessible line-height
     4. Improve text rendering
   */
-  body {
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-    width: 100vw;
-    height: 100vh;
-  }
-  /*
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  width: 100vw;
+  height: 100vh;
+}
+
+/*
     5. Improve media defaults
   */
-  img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
-  }
-  /*
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+/*
     6. Remove built-in form typography styles
   */
-  input, button, textarea, select {
-    font: inherit;
-  }
-  /*
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/*
     7. Avoid text overflows
   */
-  p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-  }
-  /*
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+/*
     8. Create a root stacking context
   */
-  #root, #__next {
-    isolation: isolate;
-  }
-/**************************************************/
-  ul {
-    list-style-type: none;
-    padding: 0;
-  }
+#root,
+#__next {
+  isolation: isolate;
+}
 
- 
+/**************************************************/
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+
 
 /* Header > toolbar > bookshelf*/
-  .wrapper {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    padding: 10px;
-    gap:15px;
-    margin:15px;
-  }
+.wrapper {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  padding: 10px;
+  gap: 15px;
+  margin: 15px;
+}
 
-  .main {
-    grid-column: 1/4;
-    grid-row: 1/3;
+.main {
+  grid-column: 1/4;
+  grid-row: 1/3;
 
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 4rem 1fr;
-    gap: 15px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 4rem 1fr;
+  gap: 15px;
 
-    
 
-  }
 
-  .addBook {
-    border-radius:8px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    color: black;
-    font-weight: bold;
-    background-color: rgb(232, 244, 245);
+}
 
-  }
+button {
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  color: black;
+  font-weight: bold;
+  background-color: rgb(232, 244, 245);
+  cursor: pointer;
 
-  .addBook:hover {
-    background-color: rgb(165, 151, 168);
-  }
+}
 
-  .toolbar {
-    border: 1px solid rgba(0, 0, 0, 0.199);
-    background-color: rgba(60, 182, 204, 0.507);
-    border-radius: 5px;
-    grid-column: 1/2;
-    grid-row: 1/2;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding:20px;
+button:hover {
+  background-color: rgb(165, 151, 168);
+}
 
-  }
+.toolbar {
+  border: 1px solid rgba(0, 0, 0, 0.199);
+  background-color: rgba(60, 182, 204, 0.507);
+  border-radius: 5px;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
 
-  .shelf {
-    grid-column: 1/2;
-    grid-row: 2/4;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(autofit, 1fr);
-    gap:15px;
-    margin: 5px;
+}
 
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
-    align-content: center;
-    
-    
-    
-  }
+.shelf {
+  grid-column: 1/2;
+  grid-row: 2/4;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(autofit, 1fr);
+  gap: 15px;
+  margin: 5px;
 
-  .book {
-    
-    border:1px solid rgba(255, 192, 203, 0.433);
-    box-shadow: 3px 3px 3px 1px rgba(83, 166, 180, 0.507);
-    border-radius: 10px;
-    padding: 30px;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  align-content: center;
 
-    
-  }
+
+
+}
+
+.book {
+
+  border: 1px solid rgba(255, 192, 203, 0.433);
+  box-shadow: 3px 3px 3px 1px rgba(83, 166, 180, 0.507);
+  border-radius: 10px;
+  padding: 30px;
+  cursor: pointer;
+
+
+}
 
 .title {
-    font-weight: bold;
-    font-size: 1.7rem;
+  font-weight: bold;
+  font-size: 1.7rem;
 }
 
 .pageCount {
-    font-weight: lighter;
-    font-style: italic;
-    font-size: .8rem;
-    margin-top: 40px;
+  font-weight: lighter;
+  font-style: italic;
+  font-size: .8rem;
+  margin-top: 40px;
 }
 
 
 .bookPopup {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform:translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid black;
+  border-radius: 10px;
 }
 
 ::backdrop {
 
-    background-image: linear-gradient(
-        45deg,
-    magenta,
-    rebeccapurple,
-    dodgerblue,
-    green
-    );
-    opacity: 0.75;
+  background-image: linear-gradient(45deg,
+      magenta,
+      rebeccapurple,
+      dodgerblue,
+      green);
+  opacity: 0.75;
+}
+
+
+form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(autofit, 1fr);
+  justify-items: start;
+  align-items: center;
+  gap: 5px;
+  padding: 10px;
+
+}
+
+#msg {
+  justify-self: center;
+  font-size: 1.5rem;
+  margin-bottom: 3px;
 }
