--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ button:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 1px solid black;
+  border: 1.5px solid black;
   border-radius: 10px;
 }
 
@@ -193,9 +193,10 @@ form {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(autofit, 1fr);
+  justify-content: center;
   justify-items: start;
   align-items: center;
-  gap: 5px;
+  gap: 8px;
   padding: 10px;
 
 }
@@ -204,4 +205,11 @@ form {
   justify-self: center;
   font-size: 1.5rem;
   margin-bottom: 3px;
+}
+
+.buttons {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  margin-top: 10px;
 }
