Add reset library function to clear array and cards

--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ button:hover {
 
 
 .bookPopup {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
