Add responsive background color change for fiished books

--- a/style.css
+++ b/style.css
@@ -230,3 +230,7 @@ form {
 .check.complete::after {
   background-image: url(img/checked.svg);
 }
+
+.complete {
+  background-color: rgba(128, 128, 128, 0.12);
+}
