--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ body {
   -webkit-font-smoothing: antialiased;
   width: 100vw;
   height: 100vh;
+
+
 }
 
 /*
@@ -102,7 +104,8 @@ ul {
 
 button {
   border-radius: 8px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
+  border: 1px solid transparent;
+  box-shadow: 0 0 5px rgb(83, 165, 180);
   color: black;
   font-weight: bold;
   background-color: rgb(232, 244, 245);
@@ -133,6 +136,7 @@ button:hover {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(autofit, 1fr);
+  grid-auto-flow: row;
   gap: 15px;
   margin: 5px;
 
@@ -140,11 +144,14 @@ button:hover {
 
 .book {
 
-  border: 1px solid rgba(255, 192, 203, 0.433);
-  box-shadow: 3px 3px 3px 1px rgba(83, 166, 180, 0.507);
+  border: 0.5px solid transparent;
+  box-shadow: 0 0 10px rgb(60, 162, 180);
   border-radius: 10px;
   padding: 30px;
   cursor: pointer;
+
+  width: 175px;
+  height: 250px;
 
 
 }
@@ -205,6 +212,7 @@ form {
   width: 100%;
   justify-content: space-evenly;
   margin-top: 10px;
+
 }
 
 /* Read checkbox */
@@ -221,7 +229,8 @@ form {
   width: 24px;
   height: 24px;
 
-  right: 15px;
+  right: 10px;
+  bottom: 10px;
 
 }
 
@@ -232,5 +241,17 @@ form {
 }
 
 .complete {
-  background-color: rgba(128, 128, 128, 0.12);
+  background-image: linear-gradient(45deg,
+      magenta,
+      rebeccapurple,
+      dodgerblue,
+      green);
+  opacity: 0.8;
+
+}
+
+:focus {
+  outline: none;
+  border: 1px solid transparent;
+  box-shadow: 0 0 20px rgb(60, 162, 180);
 }
