--- a/style.css
+++ b/style.css
@@ -254,3 +254,7 @@ form {
   border: 1px solid transparent;
   box-shadow: 0 0 20px rgb(60, 162, 180);
 }
+
+form>p>*:focus {
+  box-shadow: 0 0 5px rgb(60, 162, 180);
+}
