--- a/style.css
+++ b/style.css
@@ -162,7 +162,9 @@ button:hover {
   border-radius: 50px;
   width: 18px;
   height: 18px;
-
+  background-image: url(resources/x-mark-16.png);
+  opacity: .5;
+  overflow: hidden;
   bottom: -30px;
   left: 50%;
   transform: translate(-50%);
@@ -171,7 +173,7 @@ button:hover {
 .remove:hover {
   background-image: url(resources/x-mark-16.png);
   background-color: transparent;
-  opacity: .6;
+  opacity: .8;
 }
 
 .title {
