--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'Roboto';
   src: url(resources/Roboto-Regular.ttf);
@@ -26,7 +25,6 @@
     3. Add accessible line-height
     4. Improve text rendering
   */
-
 
 body {
   line-height: 1.5;
@@ -69,7 +67,6 @@ h4,
 h5,
 h6 {
   overflow-wrap: break-word;
-
 }
 
 /*
@@ -85,8 +82,6 @@ ul {
   list-style-type: none;
   padding: 0;
 }
-
-
 
 .wrapper {
   display: grid;
@@ -105,9 +100,6 @@ ul {
   grid-template-columns: 1fr;
   grid-template-rows: 4rem 1fr;
   gap: 15px;
-
-
-
 }
 
 button {
@@ -118,7 +110,6 @@ button {
   font-weight: bold;
   background-color: rgb(232, 244, 245);
   cursor: pointer;
-
 }
 
 button:hover {
@@ -135,7 +126,6 @@ button:hover {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-
 }
 
 .shelf {
@@ -148,7 +138,6 @@ button:hover {
   row-gap: 50px;
   column-gap: 18px;
   margin: 5px;
-
 }
 
 .book {
@@ -169,7 +158,7 @@ button:hover {
   width: 18px;
   height: 18px;
   background-image: url(resources/x-mark-16.png);
-  opacity: .3;
+  opacity: 0.3;
   overflow: hidden;
   bottom: -30px;
   left: 50%;
@@ -179,7 +168,7 @@ button:hover {
 .remove:hover {
   background-image: url(resources/x-mark-16.png);
   background-color: transparent;
-  opacity: .7;
+  opacity: 0.7;
 }
 
 .title {
@@ -190,10 +179,9 @@ button:hover {
 .pageCount {
   font-weight: lighter;
   font-style: italic;
-  font-size: .8rem;
+  font-size: 0.8rem;
   margin-top: 40px;
 }
-
 
 .bookPopup {
   position: fixed;
@@ -205,15 +193,15 @@ button:hover {
 }
 
 ::backdrop {
-
-  background-image: linear-gradient(45deg,
-      magenta,
-      rebeccapurple,
-      dodgerblue,
-      green);
+  background-image: linear-gradient(
+    45deg,
+    magenta,
+    rebeccapurple,
+    dodgerblue,
+    green
+  );
   opacity: 0.75;
 }
-
 
 form {
   display: grid;
@@ -224,7 +212,6 @@ form {
   align-items: center;
   gap: 8px;
   padding: 10px;
-
 }
 
 #msg {
@@ -238,7 +225,6 @@ form {
   width: 100%;
   justify-content: space-evenly;
   margin-top: 10px;
-
 }
 
 /* Read checkbox */
@@ -249,7 +235,7 @@ form {
 
 .check::after {
   position: absolute;
-  content: "";
+  content: '';
   background-image: url(resources/unchecked.svg);
   background-size: cover;
   width: 24px;
@@ -257,23 +243,21 @@ form {
 
   right: 10px;
   bottom: 10px;
-
 }
-
-
 
 .check.complete::after {
   background-image: url(resources/checked.svg);
 }
 
 .complete {
-  background-image: linear-gradient(45deg,
-      magenta,
-      rebeccapurple,
-      dodgerblue,
-      green);
+  background-image: linear-gradient(
+    45deg,
+    magenta,
+    rebeccapurple,
+    dodgerblue,
+    green
+  );
   opacity: 0.8;
-
 }
 
 :focus {
@@ -282,11 +266,10 @@ form {
   box-shadow: 0 0 20px rgb(60, 162, 180);
 }
 
-form>p>*:focus {
+form > p > *:focus {
   box-shadow: 0 0 5px rgb(60, 162, 180);
 }
 
 .buttons:focus {
-
   box-shadow: 0 0 5px rgb(60, 162, 180);
 }
