--- a/style.css
+++ b/style.css
@@ -119,14 +119,19 @@ button:hover {
   position: absolute;
   width: 150px;
   z-index: 10;
-  top: 500px;
+  background-color: white;
   box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.486);
+  visibility: hidden;
 }
 
 .menu-opts > li {
   border: 1px solid black;
 
   padding: 6px;
+}
+
+.visible {
+  visibility: visible;
 }
 
 .menu-opts > li:hover {
