Add reel module, update webpack config to load imgs properly

--- a/style.css
+++ b/style.css
@@ -96,9 +96,11 @@ ul {
   position: relative;
   width: 50%;
   overflow: hidden;
+  justify-self: center;
 }
 
 main {
+  margin: 10px;
   display: grid;
 }
 
