Add text to home page, remove test books

--- a/style.css
+++ b/style.css
@@ -96,12 +96,14 @@ ul {
   position: relative;
   width: 50%;
   overflow: hidden;
-  justify-self: center;
 }
 
 main {
-  margin: 10px;
+  margin: 24px;
   display: grid;
+  gap: 48px;
+  justify-content: center;
+  justify-items: center;
 }
 
 .imgButtons {
