--- a/style.css
+++ b/style.css
@@ -98,6 +98,12 @@ ul {
   overflow: hidden;
 }
 
+.navigation {
+  margin: 10px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
 main {
   margin: 24px;
   display: grid;
@@ -106,10 +112,22 @@ main {
   justify-items: center;
 }
 
-.imgButtons {
-  margin: 15px;
-  display: flex;
-  justify-content: space-between;
+.circles {
+  text-align: center;
+}
+
+.circle {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #ccc;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.active {
+  background-color: #333;
 }
 
 .wrapper {
