--- a/src/style.css
+++ b/src/style.css
@@ -332,3 +332,18 @@ form {
 form > p > *:focus {
   box-shadow: 0 0 5px rgb(60, 162, 180);
 }
+
+#login-form {
+  display: grid;
+  justify-self: center;
+  align-self: center;
+  border: 1px solid #333;
+  padding: 48px;
+}
+
+.form-wrapper {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  display: grid;
+}
