--- a/src/style.css
+++ b/src/style.css
@@ -335,15 +335,23 @@ form > p > *:focus {
 
 #login-form {
   display: grid;
+  width: 50%;
   justify-self: center;
-  align-self: center;
+  margin: 24px;
   border: 1px solid #333;
   padding: 48px;
+  border-radius: 50px;
+  background-color: rgba(60, 182, 204, 0.507);
 }
 
 .form-wrapper {
   width: 100%;
-  height: 100%;
+
   text-align: center;
   display: grid;
+}
+
+.bad-input {
+  background-color: rgba(255, 0, 0, 0.384);
+  border-radius: 5px;
 }
